<resources>
    <string name="app_name">CloudinaryVS</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="publicid">Public ID</string>
    <string name="cloud_name">Cloud Name</string>
    <string name="load">load</string>
    <string name="subtitle">subtitle</string>
    <string name="defaultCloudName">candidate-evaluation</string>
    <string name="defaultPublicId">The_Present.mp4</string>
    <string name="default_timing">00:00:0</string>
    <string name="bg_color">bg color</string>
    <string name="txt_color">txt color</string>
    <!--    <string name="defaultCloudName">demo</string>-->
</resources>