<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_gradient_bg"
    android:clipToPadding="false"
    android:padding="8dp"
    tools:context=".ui.screen.VideoPlayerScreen">

    <com.google.android.exoplayer2.ui.PlayerView
        android:id="@+id/videoView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:resize_mode="fit"
        app:show_buffering="always"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/cloudNameTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@color/colorPrimaryDark"
        android:minWidth="100dp"
        android:padding="8dp"
        android:text="@string/cloud_name"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/videoView" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/cloudNameValue"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/colorPrimary"
        android:lines="1"
        android:maxLines="1"
        android:padding="8dp"
        android:text="@string/defaultCloudName"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:imeOptions="actionNext"
        android:inputType="text"
        android:nextFocusDown="@id/publicIdValue"
        app:layout_constraintBottom_toBottomOf="@id/cloudNameTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/cloudNameTitle"
        app:layout_constraintTop_toTopOf="@id/cloudNameTitle" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/publicIdTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:background="@color/colorPrimaryDark"
        android:minWidth="100dp"
        android:padding="8dp"
        android:text="@string/publicid"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cloudNameTitle" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/publicIdValue"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/colorPrimary"
        android:maxLines="1"
        android:inputType="text"
        android:padding="8dp"
        android:lines="1"
        android:imeOptions="actionDone"
        android:textColor="@color/white"
        android:text="@string/defaultPublicId"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@id/publicIdTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/publicIdTitle"
        app:layout_constraintTop_toTopOf="@id/publicIdTitle" />

    <Button
        android:id="@+id/loadButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/load"
        android:textColor="@color/colorAccent"
        android:textStyle="bold"
        android:layout_marginEnd="2dp"
        android:layout_marginStart="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/bgColorButton"
        app:layout_constraintTop_toBottomOf="@id/publicIdTitle" />

    <Button
        android:id="@+id/bgColorButton"
        android:text="@string/bg_color"
        android:layout_width="0dp"
        android:layout_marginEnd="2dp"
        android:textColor="@color/colorAccent"
        android:layout_marginStart="2dp"
        app:layout_constraintTop_toTopOf="@id/loadButton"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/txtColorButton"
        app:layout_constraintEnd_toStartOf="@id/loadButton"/>

    <Button
        android:id="@+id/txtColorButton"
        android:text="@string/txt_color"
        android:layout_width="0dp"
        android:textStyle="bold"
        android:layout_marginEnd="2dp"
        android:layout_marginStart="2dp"
        android:layout_height="wrap_content"
        android:textColor="@color/colorAccent"
        app:layout_constraintTop_toTopOf="@id/loadButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/bgColorButton"/>


    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/addButton"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:adjustViewBounds="true"
        android:translationX="16dp"
        android:translationY="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/action_button_animated" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="0dp"
        android:background="@drawable/rounded_bg"
        android:translationZ="-1dp"
        android:focusable="false"
        android:focusableInTouchMode="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loadButton"
        tools:listitem="@layout/timing_item" />

</androidx.constraintlayout.widget.ConstraintLayout>